<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_surface"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_md"
    android:paddingTop="@dimen/space_sm"
    android:paddingEnd="@dimen/space_md"
    android:paddingBottom="@dimen/space_lg">

    <View
        android:layout_width="44dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/space_lg"
        android:background="@drawable/bg_demo_badge" />

    <TextView
        android:id="@+id/taskMeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:textColor="@color/color_text_secondary"
        android:textDirection="locale"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:layout_marginBottom="@dimen/space_md"
        android:textColor="@color/color_text_primary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detailsButton"
        style="@style/Widget.SprintSync.TaskActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_details"
        app:icon="@drawable/ic_details" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/assignButton"
        style="@style/Widget.SprintSync.TaskActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assign_to_me"
        app:icon="@drawable/ic_assign" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        style="@style/Widget.SprintSync.TaskActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_task"
        app:icon="@drawable/ic_edit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteButton"
        style="@style/Widget.SprintSync.TaskActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_task"
        android:textColor="@color/color_error"
        app:icon="@drawable/ic_delete"
        app:iconTint="@color/color_error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareButton"
        style="@style/Widget.SprintSync.TaskActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_status"
        app:icon="@drawable/ic_share" />

</LinearLayout>
