<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_background"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_projects"
        app:title="@string/projects"
        app:titleTextColor="@color/color_text_primary" />

    <LinearLayout
        android:id="@+id/summaryContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/screen_padding"
        android:paddingTop="@dimen/space_sm"
        android:paddingEnd="@dimen/screen_padding"
        android:paddingBottom="@dimen/space_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/boardCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/active_boards"
            android:textColor="@color/color_text_secondary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/modeBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:background="@drawable/bg_demo_badge"
            tools:text="@string/demo_mode"
            android:textColor="@color/color_text_secondary"
            android:textSize="11sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/projectsRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/screen_padding"
        android:paddingTop="@dimen/space_sm"
        android:paddingEnd="@dimen/screen_padding"
        android:paddingBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summaryContainer" />

    <LinearLayout
        android:id="@+id/emptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/space_lg"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summaryContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_projects_title"
            android:textColor="@color/color_text_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:gravity="center"
            android:text="@string/no_projects_message"
            android:textColor="@color/color_text_secondary"
            android:textSize="14sp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addBoardFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_lg"
        android:contentDescription="@string/new_project"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/color_on_primary" />

</androidx.constraintlayout.widget.ConstraintLayout>
